--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,15 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+
+.user_edit {
+    width: 100%;
+}
+
+.errors_sentence {
+    color: red;
+}
+
+.notice {
+    color: green;
+}
