--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,38 +1,37 @@
-
 <% if @book.errors.any? %>
-  <div id="error_explanation" class="alert alert-danger">
+  <div id="error_explanation">
     <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
-  <!--<div class = "alert alert-warning">-->
     <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
     </ul>
   </div>
 <% end %>
 
 <main>
-        <div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-<h1>Editing Book</h1>
+  <div class='container'>
+    <div class='row'>
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+        <h1>Editing Book</h1>
 <%=form_with model:@book, url: book_path(@book.id), local:true do |f| %>
 
-  <div class="form-group">
-    <label for="book_title">Title</label>
-    <%= f.text_field :title, class: 'form-control book_title' %>
-  </div>
+        <div class="form-group">
+          <label for="book_title">Title</label>
+          <%= f.text_field :title, class: 'form-control book_title' %>
+        </div>
 
-  <div class="form-group">
-    <label for="book_opinion">Opinion</label>
-    <%= f.text_area :body, class: 'form-control book_body' %>
-  </div>
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label>
+          <%= f.text_area :body, class: 'form-control book_body' %>
+        </div>
   
-      <div class="form-group">
-    <h4><%=f.submit 'Update Book', class: 'btn btn-success' %></h4>
-  </div>
-    
+        <div class="form-group">
+          <h4><%=f.submit 'Update Book', class: 'btn btn-success' %></h4>
+        </div>
 <% end %>
-<%= link_to "Show", book_path(@book.id), class: 'book_12282' %> | <%= link_to "Back", "/books", class: 'back' %>
+    <%= link_to "Show", book_path(@book.id), class: 'book_12282' %> | <%= link_to "Back", "/books", class: 'back' %>
+      </div>
+    </div>
   </div>
-</div>
+</main>
