--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,28 +1,38 @@
 <main>
-        <div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class='col-md-3'>
-  <h2>User info</h2>
-<table class='table'>
-<tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "nope.jpeg" %></tr>
-<tr>
-        <th>name</th>
-        <th><%= @user.name %></th>
-      </tr>
-      <tr>
-        <th>introduction</th>
-        <th><%= @user.introduction %></th>
-      </tr>
-    </table>
-<div class='row'>
+  <div class='container px-5 px-sm-0'>
+    <div class='errors_sentence'>
+      <% if @book.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+          <ul>
+      <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+      <% end %>
+          </ul>
+        </div>
+      <% end %>
+    </div>
+  
+    <div class='row'>
+      <div class='col-md-3'>
+        <h2>User info</h2>
+        <table class='table'>
+          <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "nope.jpeg" %></tr>
+          <tr>
+            <th>name</th>
+            <th><%= @user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= @user.introduction %></th>
+          </tr>
+        </table>
+        <div class='row'>
+          <p class="user_edit"><%= link_to ' ', edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %></p>
+        </div>
 
-    <% if @user.id == current_user.id %>
-        <p><%= link_to '編集', edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog edit_user_14509' %></p>
-    <% end %>
-</div>
-
-<h2 class="mt-3">New book</h2>
-      <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="L7zp4wHbmDmEnSw5vqlIWoAat19aIswrgagXQ17Hz3J509VJyLQGu51bShpefvtuP1AuuucXoh97E57b5cyT9A==" />
+    <h2 class="mt-3">New book</h2>
+  <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="L7zp4wHbmDmEnSw5vqlIWoAat19aIswrgagXQ17Hz3J509VJyLQGu51bShpefvtuP1AuuucXoh97E57b5cyT9A==" />
 <%=form_with model:@book, url: books_path, local:true do |f| %>
 
   <div class="form-group">
@@ -35,67 +45,40 @@
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
     
-    <div class="form-group">
+  <div class="form-group">
     <h4><%=f.submit 'Create Book', class: 'btn btn-success' %></h4>
-    </div>
-    </form>
-<% end %>
-</div>
-
-
-
-<% if @book.errors.any? %>
-  <div id="error_explanation" class="alert alert-danger">
-    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
-  <!--<div class = "alert alert-warning">-->
-    <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
   </div>
+  </form>
 <% end %>
-<div class='col-md-8 offset-md-1'>
-<h2>Books</h2>
-  <table class="table table-hover table-inverse">
-    <thead>
-      <tr>
-        <th></th>
-        <th>Title</th>
-        <th>Opinion</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
+      </div>
+
+        <div class='col-md-8 offset-md-1'>
+          <h2>Books</h2>
+          <table class="table table-hover table-inverse">
+            <thead>
+              <tr>
+                <th>Title</th>
+                <th>Opinion</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
   
-  <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td>
-        <%= link_to user_path(book.user_id) do %>
-      <%= attachment_image_tag book.user, :profile_image, :fill, 20, 20, format: 'no_image.jpg', fallback: "nope.jpeg", size: '20x20' %>
-        <% end %>
-        </td>
-        <td><%= link_to book.title, book_path(book.id), class: 'book_12282' %></td>
-        <td><%= book.body %></td>
-      </tr>
-    <% end %>
-  </tbody>
-  </table>
-  
-  <%= form_with model:@book, url: books_path, local:true do |f| %>
-
-<div class="field">
-    <label for="book_title">Title</label>
-    <%= f.text_field :title %>
-</div>
-
-<div class="field">
-    <label for="book_body">Body</label>
-    <%= f.text_area :body %>
-</div>
-
-    
-    <h4><%=f.submit 'Create Book' %></h4>
-<% end %>
-
-<h2>Books_本一覧_books/index</h2>
+            <tbody>
+              <% @books.each do |book| %>
+              <tr>
+                <td>
+                <%= link_to user_path(book.user_id) do %>
+                <%= attachment_image_tag book.user, :profile_image, :fill, 20, 20, format: 'no_image.jpg', fallback: "nope.jpeg", size: '20x20' %>
+                <% end %>
+                </td>
+                <td><%= link_to book.title, book_path(book.id), class: 'book_12282' %></td>
+                <td><%= book.body %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
