--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,30 +1,26 @@
+<main>
+  <div class='container px-5 px-sm-0'>
+    <div class='row'>
+      <div class='col-md-3'>
+        <h2>User info</h2>
+        <table class='table'>
+          <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "nope.jpeg" %></tr>
+          <tr>
+            <th>name</th>
+            <th><%= @user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= @user.introduction %></th>
+          </tr>
+        </table>
+        <div class='row'>
+          <p class="user_edit"><%= link_to ' ', edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %></p>
+        </div>
 
-
-<div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class='col-md-3'>
-  <h2>User info</h2>
-<table class='table'>
-<tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "nope.jpeg" %></tr>
-<tr>
-        <th>name</th>
-        <th><%= @user.name %></th>
-      </tr>
-      <tr>
-        <th>introduction</th>
-        <th><%= @user.introduction %></th>
-      </tr>
-    </table>
-<div class='row'>
-
-    <% if @user.id == current_user.id %>
-        <p><%= link_to '編集', edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog edit_user_14509' %></p>
-    <% end %>
-</div>
-
-<h2 class="mt-3">New book</h2>
-      <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="L7zp4wHbmDmEnSw5vqlIWoAat19aIswrgagXQ17Hz3J509VJyLQGu51bShpefvtuP1AuuucXoh97E57b5cyT9A==" />
-<%=form_with model:@book, url: books_path, local:true do |f| %>
+  <h2 class="mt-3">New book</h2>
+  <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="L7zp4wHbmDmEnSw5vqlIWoAat19aIswrgagXQ17Hz3J509VJyLQGu51bShpefvtuP1AuuucXoh97E57b5cyT9A==" />
+<%=form_with model:@new_book, url: books_path, local:true do |f| %>
 
   <div class="form-group">
     <label for="book_title">Title</label>
@@ -39,25 +35,28 @@
     <div class="form-group">
     <h4><%=f.submit 'Create Book', class: 'btn btn-success' %></h4>
     </div>
-    </form>
+  </form>
 <% end %>
-</div>
+      </div>
 
-<div class='col-md-8 offset-md-1'>
-<h2>Book detail</h2>
-<table class="table">
-    <tr>
-      <td><%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "nope.jpeg",size:'20x20',format: 'no_image.jpg' %>
-      <%= link_to @book.user.name, user_path(current_user.id) %>
-      </td>
-      <td><%= link_to @book.title, book_path %></td>
-      <td><%= @book.body %></td>
-      <% if @user.id == current_user.id %>
-        <td><%= link_to 'Edit', edit_book_path(@book.id), class: 'btn btn-sm btn-success edit_book_12282' %></td>
-        <td><%= link_to 'Destroy', book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？", class: 'btn btn-sm btn-danger destroy_book_12282' %></td>
-      <% end %>
-    </tr>
-</table>
+      <div class='col-md-8 offset-md-1'>
+        <h2>Book detail</h2>
+        <table class="table">
+          <tr>
+            <td><% link_to user_path(@book.user.id) do %>
+            <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "nope.jpeg",size:'20x20',format: 'no_image.jpg' %><br>
+            <% end %>
+            <%= link_to @book.user.name, user_path(@book.user.id) %>
+            </td>
+            <td><%= link_to @book.title, book_path %></td>
+            <td><%= @book.body %></td>
+            <% if @user.id == current_user.id %>
+            <td><%= link_to 'Edit', edit_book_path(@book.id), class: 'btn btn-sm btn-success edit_book_12282' %></td>
+            <td><%= link_to 'Destroy', book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？", class: 'btn btn-sm btn-danger destroy_book_12282' %></td>
+            <% end %>
+          </tr>
+        </table>
+      </div>
     </div>
   </div>
-</div>
+</main>
