--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,28 +1,27 @@
 <main>
-        <div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class='col-md-3'>
-  <h2>User info</h2>
-<table class='table'>
-<tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "nope.jpeg" %></tr>
-<tr>
-        <th>name</th>
-        <th><%= @user.name %></th>
-      </tr>
-      <tr>
-        <th>introduction</th>
-        <th><%= @user.introduction %></th>
-      </tr>
-    </table>
-<div class='row'>
+  <div><p id="notice"></p></div>
+  <div class='container px-5 px-sm-0'>
+    <div class='row'>
+      <div class='col-md-3'>
+        <h2>User info</h2>
+        <table class='table'>
+          <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "nope.jpeg" %></tr>
+          <tr>
+            <th>name</th>
+            <th><%= @user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= @user.introduction %></th>
+          </tr>
+        </table>
+        <div class='row'>
+          <p class="user_edit"><%= link_to ' ', edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %></p>
+        </div>
 
-    <% if @user.id == current_user.id %>
-        <p><%= link_to '編集', edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog edit_user_14509' %></p>
-    <% end %>
-</div>
 
-<h2 class="mt-3">New book</h2>
-      <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="L7zp4wHbmDmEnSw5vqlIWoAat19aIswrgagXQ17Hz3J509VJyLQGu51bShpefvtuP1AuuucXoh97E57b5cyT9A==" />
+  <h2 class="mt-3">New book</h2>
+  <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="L7zp4wHbmDmEnSw5vqlIWoAat19aIswrgagXQ17Hz3J509VJyLQGu51bShpefvtuP1AuuucXoh97E57b5cyT9A==" />
 <%=form_with model:@book, url: books_path, local:true do |f| %>
 
   <div class="form-group">
@@ -34,36 +33,40 @@
     <label for="book_body">Opinion</label>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
-    
-    <div class="form-group">
-    <h4><%=f.submit 'Create Book', class: 'btn btn-success' %></h4>
-    </div>
-    </form>
-<% end %>
-</div>
 
-<div class='col-md-8 offset-md-1'>
-<h2>Books</h2>
-  <table class='table table-hover table-inverse'>
-  <thead>
-    <tr>
-        <th></th>
-        <th>Title</th>
-        <th>Opinion</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-    
-    <tbody>
+  <div class="form-group">
+    <h4><%=f.submit 'Create Book', class: 'btn btn-success' %></h4>
+  </div>
+  </form>
+<% end %>
+      </div>
+
+      <div class='col-md-8 offset-md-1'>
+        <h2>Books</h2>
+        <table class='table table-hover table-inverse'>
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+
+          <tbody>
       <% @books.each do |book| %>
-        <tr>
-          <td><%= attachment_image_tag @user, :profile_image, :fill, 20, 20, format: 'no_image.jpg', fallback: "nope.jpeg", size: '20x20', class: 'attachment user profile_image fallback' %></td>
-          <td><%= book.title %></td>
-          <td><%= book.body %></td>
-        </tr>
+            <tr>
+              <td>
+                <%= link_to user_path(book.user_id) do %>
+                <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, format: 'no_image.jpg', fallback: "nope.jpeg", size: '20x20', class: 'attachment user profile_image fallback' %>
+                <% end %>
+              </td>
+              <td><%= link_to book.title, book_path(book.id), class: 'book_12282' %></td>
+              <td><%= book.body %></td>
+            </tr>
       <% end %>
-    </tbody>
-  </table>
-</div>
-  
-<h2>Home_マイページ_users/show</h2>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</main>
