--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,35 +18,34 @@
           <p class="user_edit"><%= link_to ' ', edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %></p>
         </div>
 
-  <h2 class="mt-3">New book</h2>
-  <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="L7zp4wHbmDmEnSw5vqlIWoAat19aIswrgagXQ17Hz3J509VJyLQGu51bShpefvtuP1AuuucXoh97E57b5cyT9A==" />
-<%=form_with model:@new_book, url: books_path, local:true do |f| %>
+        <h2 class="mt-3">New book</h2>
+        <%=form_with model:@new_book, url: books_path, local:true do |f| %>
 
-  <div class="form-group">
-    <label for="book_title">Title</label>
-    <%= f.text_field :title, class: 'form-control book_title' %>
-  </div>
+          <div class="form-group">
+            <label for="book_title">Title</label>
+            <%= f.text_field :title, class: 'form-control book_title' %>
+          </div>
 
-  <div class="form-group">
-    <label for="book_body">Opinion</label>
-    <%= f.text_area :body, class: 'form-control book_body' %>
-  </div>
-    
-    <div class="form-group">
-    <h4><%=f.submit 'Create Book', class: 'btn btn-success' %></h4>
-    </div>
-  </form>
-<% end %>
+          <div class="form-group">
+            <label for="book_body">Opinion</label>
+            <%= f.text_area :body, class: 'form-control book_body' %>
+          </div>
+
+          <div class="form-group">
+            <h4><%=f.submit 'Create Book', class: 'btn btn-success' %></h4>
+          </div>
+        <% end %>
       </div>
 
       <div class='col-md-8 offset-md-1'>
         <h2>Book detail</h2>
         <table class="table">
           <tr>
-            <td><% link_to user_path(@book.user.id) do %>
-            <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "nope.jpeg",size:'20x20',format: 'no_image.jpg' %><br>
-            <% end %>
-            <%= link_to @book.user.name, user_path(@book.user.id) %>
+            <td>
+              <%= link_to user_path(@book.user.id) do %>
+                <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, format: 'no_image.jpg', fallback: "nope.jpeg", size: '20x20' %><br>
+                <%= @book.user.name %>
+              <% end %>
             </td>
             <td><%= link_to @book.title, book_path %></td>
             <td><%= @book.body %></td>
