--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,39 +1,39 @@
 <main>
-  <p id="notice"></p>
   <div class='container'>
     <div class='row'>
       <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
         <h2>User info</h2>
-        <form enctype="multipart/form-data" action="/users/14639" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="_method" value="patch" /><input type="hidden" name="authenticity_token" value="Iu6ie2R/ERo+NbEE4a8XcPGRuaPriu88jEt0JTBNdDcDExcQhRoxgUWoS2W8HGpspcoPEjr1x5BS2jWIE+Ec5Q==" />
-<%= form_with model:@user, local:true do |f| %>
+        <%= form_with model:@user, local:true do |f| %>
+        <div class='errors_sentence'>
+          <% if @user.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= @user.errors.count %> error prohibited this obj from being saved:</h2>
+              <ul>
+                <% @user.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+        </div>
 
-    <% if @user.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= @user.errors.count %> error prohibited this obj from being saved:</h2>
-        <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+          
+          <div class="form-group">
+            <label for="user_name">Name</label>
+            <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前", class: 'form-control name' %>
+          </div>
+          <div class="form-group">
+            <label for="user_image">Image</label>
+            <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: 'form-control-file user_image' %>
+          </div>
+          <div class="form-group">
+            <label for="user_introduction">Introduction</label>
+            <%= f.text_field :introduction, autofocus: true, id:"inputName", class: 'form-control introduction' %>
+          </div>
+          <div class="form-group">
+            <%= f.submit "Update User", class: 'btn btn-secondary' %>
+          </div>
         <% end %>
-        </ul>
-      </div>
-    <% end %>
-        <div class="form-group">
-          <label for="user_name">Name</label>
-          <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前", class: 'form-control name' %>
-        </div>
-        <div class="form-group">
-          <label for="user_image">Image</label>
-          <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: 'form-control-file user_image' %>
-        </div>
-        <div class="form-group">
-          <label for="user_introduction">Introduction</label>
-          <%= f.text_field :introduction, autofocus: true, id:"inputName", class: 'form-control introduction' %>
-        </div>
-        <div class="form-group">
-          <%= f.submit "Update User", class: 'btn btn-secondary' %>
-        </div>
-<% end %>
-        </form>
       </div>
     </div>
   </div>
