--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -17,7 +17,7 @@
       <div class='col-md-3'>
         <h2>User info</h2>
         <table class='table'>
-          <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "nope.jpeg", size: '100x100' %></tr>
+          <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg", size: '100x100' %></tr>
           <tr>
             <th>name</th>
             <th><%= @user.name %></th>
@@ -65,7 +65,7 @@
               <tr>
                 <td>
                 <%= link_to user_path(book.user_id) do %>
-                <%= attachment_image_tag book.user, :profile_image, :fill, 20, 20, format: 'no_image.jpg', fallback: "nope.jpeg", size: '20x20' %>
+                <%= attachment_image_tag book.user, :profile_image, :fill, 20, 20, format: 'no_image.jpg', fallback: "no_image.jpeg", size: '20x20' %>
                 <% end %>
                 </td>
                 <td><%= link_to book.title, book_path(book.id), class: 'book_12282' %></td>
