--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
       <div class='col-md-3'>
         <h2>User info</h2>
         <table class='table'>
-          <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "nope.jpeg" %></tr>
+          <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg" %></tr>
           <tr>
             <th>name</th>
             <th><%= @user.name %></th>
@@ -43,7 +43,7 @@
           <tr>
             <td>
               <%= link_to user_path(@book.user.id) do %>
-                <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, format: 'no_image.jpg', fallback: "nope.jpeg", size: '20x20' %><br>
+                <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, format: 'jpeg', fallback: "no_image.jpeg", size: '20x20' %><br>
                 <%= @book.user.name %>
               <% end %>
             </td>
