--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
       <div class='col-md-3'>
         <h2>User info</h2>
         <table class='table'>
-          <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "nope.jpeg", size: '100x100' %></tr>
+          <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg", size: '100x100' %></tr>
           <tr>
             <th>name</th>
             <th><%= @user.name %></th>
@@ -51,7 +51,7 @@
            <% @users.each do |user| %>
             <tr>
               <td>
-              <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, format: 'no_image.jpg', fallback: "nope.jpeg", size: '20x20', class: 'attachment user profile_image fallback' %>
+              <%= attachment_image_tag user, :profile_image, :fill, 20, 20, format: 'jpeg', fallback: "no_image.jpeg", size: '20x20', class: 'attachment user profile_image fallback' %>
               </td>
               <td><%= user.name %></td>
               <td><%= link_to "Show", user_path(user.id) %></td>
